# rust-todo

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-06-22-090405_status/: down.sql
migrations/2024-06-22-161420_create_status/: up.sql
migrations/2024-06-22-161630_create_task/: down.sql  up.sql
migrations/2024-06-22-163751_create_task/: down.sql  up.sql
migrations/2024-06-22-164619_create_task/: down.sql  up.sql
src/: main.rs
src/controller/: mod.rs  status.rs  task.rs
src/data/: mod.rs  status.rs  task.rs
src/data/tests/: mod.rs  status.rs  task.rs
src/model/: mod.rs
src/schema/: mod.rs  status.rs  task.rs
src/service/: mod.rs  status.rs  task.rs
src/view/: mod.rs  status.rs  task.rs
